--- a/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
@@ -15,7 +15,7 @@
         </button>
     </div>
     <div>
-        <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" style="width:100%;"
+        <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" style="width:100%;display: none;"
             [rowSelection]="rowSelection" [columnDefs]="columnDefs" [gridOptions]="gridOptions" [rowData]="rowData"
             (selectionChanged)="onSelectionChanged()" class="ag-theme-alpine table-class"
             (gridReady)="onGridReady($event)"></ag-grid-angular>
@@ -65,13 +65,7 @@
                                         <span class="last1">{{ operator?.isactive === 'true' ? 'Active' :
                                             'Deactive'}}</span>
                                     </p>
-                                    <!-- <p class="text"
-                                        [ngClass]="operator?.isonlinepayment ? 'active-text' : 'deactive-text'">
-                                        <span class="label">online payment</span>
-                                        <span class="separator1">:</span>
-                                        <span class="last1">{{ operator?.isonlinepayment ? 'Active' : 'Deactive'
-                                            }}</span>
-                                    </p> -->
+
                                 </div>
                             </div>
 
@@ -124,19 +118,7 @@
                     </div>
                     <br>
                     <div class="child-card col-12">
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openDialog('box_in_hand',operator)">
-                            <div class="col-2 vertical tooltip-container">
-                                <p class="sub-text">Box In Hand</p>
-                                <span style="color: #0e610b;">
-                                    <div class="circle" style="background-color: rgb(1, 49, 49);"><span
-                                            class="circle-text">{{operator?.boxinhand}}</span></div>
-                                </span>
-                                <span class="tooltip">Box In Hand</span>
-                            </div>
-                        </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openLCO_dashboard(2)">
+                        <div class="col-2 vertical tooltip-container" (click)="openLCO_dashboard(2, operator)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">Active</p>
                                 <span style="color: #0e610b;">
@@ -146,19 +128,17 @@
                                 <span class="tooltip">Active</span>
                             </div>
                         </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openLCO_dashboard(3)">
+                        <div class="col-2 vertical tooltip-container" (click)="openLCO_dashboard(3, operator)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">Expired</p>
                                 <span style="color: #0e610b;">
-                                    <div class="circle" style="background-color: rgb(202, 9, 9);"><span
+                                    <div class="circle" style="background-color: rgb(72 67 82)"><span
                                             class="circle-text">{{expiryCount}}</span></div>
                                 </span>
                                 <span class="tooltip">Expired</span>
                             </div>
                         </div>
-                        <div class="col-2 vertical tooltip-container"
-                            (click)="openLCO_dashboard(10)">
+                        <div class="col-2 vertical tooltip-container" (click)="openLCO_dashboard(10, operator)">
                             <div class="col-2 vertical tooltip-container">
                                 <p class="sub-text">New</p>
                                 <span style="color: #0e610b;">
@@ -174,9 +154,9 @@
             </mat-card>
         </div>
     </div>
-    <div class="d-flex justify-content-center align-items-center" style="padding: 0.5rem;">
+    <!-- <div class="d-flex justify-content-center align-items-center" style="padding: 0.5rem;">
         <mat-paginator [length]="totalLength" [pageSize]="pageSize" [pageSizeOptions]="[10,50,100,500,1000,2500]"
             (page)="onPageChange($event)">
         </mat-paginator>
-    </div>
+    </div> -->
 </div>
