--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -260,7 +260,7 @@
             </ul>
         </li>
 
-        <li *ngIf="isUser "><a (click)="navgetToUrl('/lcoDashboard');setActiveLinkTab($event)" class="nav-link">
+        <li *ngIf="isUser "><a (click)="navgetToUrl('/lcoCommissionDashboard');setActiveLinkTab($event)" class="nav-link">
                 <i class='fas fa-tags icon'></i>&nbsp;Discount</a>
         </li>
         <!-- -------------------------------------------------------------Special role----------------------------------------------- -->
